syntax = "proto3";

package policy.attributes;

import "buf/validate/validate.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "policy/objects.proto";
import "policy/selectors.proto";

/*
   Key Access Server Grants
*/

// Replacing with AttributeKeyAccessServerGrant
// Deprecated
message AttributeKeyAccessServer {
  string attribute_id = 1;
  string key_access_server_id = 2;
}

// Replacing with ValueKeyAccessServerGrant
// Deprecated
message ValueKeyAccessServer {
  string value_id = 1;
  string key_access_server_id = 2;
}

message AttributeKeyAccessServerGrant {
  string attribute_id = 1;
  string attribute_fqn = 2;
  KeyAccessServer key_access_server = 3;
}

message ValueKeyAccessServerGrant {
  string value_id = 1;
  string value_fqn = 2;
  KeyAccessServer key_access_server = 3;
}

/*
   Attribute Service Definitions
*/

message ListAttributesRequest {
  // ACTIVE by default when not specified
  common.ActiveStateEnum state = 1;
  // can be id or name
  string namespace = 2;
}
message ListAttributesResponse {
  repeated policy.Attribute attributes = 1;
}

message GetAttributeRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message GetAttributeResponse {
  policy.Attribute attribute = 1;
}

message CreateAttributeRequest {
  // Required
  string namespace_id = 1 [(buf.validate.field).required = true];
  string name = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.max_len = 253,
    (buf.validate.field).cel = {
      id: "attribute_name_format",
      message: "Attribute name must be an alphanumeric string, allowing hyphens and underscores but not as the first or last character. The stored attribute name will be normalized to lower case.",
      expression: "this.matches('^[a-zA-Z0-9](?:[a-zA-Z0-9_-]*[a-zA-Z0-9])?$')"
    }
  ];
  AttributeRuleTypeEnum rule = 3 [
    (buf.validate.field).enum.defined_only = true,
    (buf.validate.field).required = true
  ];
  // Optional attribute values (when provided) must be alphanumeric strings, allowing hyphens and underscores but not as the first or last character.
  // The stored attribute value will be normalized to lower case.
  repeated string values = 4 [
    (buf.validate.field).repeated = {
      min_items: 0,
      unique: true,
      items: {
        string: 
          {
            max_len: 253,
            pattern: "^[a-zA-Z0-9](?:[a-zA-Z0-9_-]*[a-zA-Z0-9])?$"
          }
      },
    }
  ];

  // Optional
  common.MetadataMutable metadata = 100;
}
message CreateAttributeResponse {
  policy.Attribute attribute = 1;
}

message UpdateAttributeRequest {
  // Required
  string id = 1 [(buf.validate.field).required = true];

  // Optional
  common.MetadataMutable metadata = 100;
  common.MetadataUpdateEnum metadata_update_behavior = 101;
}
message UpdateAttributeResponse {
  policy.Attribute attribute = 1;
}

message DeactivateAttributeRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message DeactivateAttributeResponse {
  policy.Attribute attribute = 1;
}

///
/// Value RPC messages
///
message GetAttributeValueRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message GetAttributeValueResponse {
  policy.Value value = 1;
}

message ListAttributeValuesRequest {
  string attribute_id = 1 [(buf.validate.field).required = true];
  // ACTIVE by default when not specified
  common.ActiveStateEnum state = 2;
}
message ListAttributeValuesResponse {
  repeated policy.Value values = 1;
}

message CreateAttributeValueRequest {
  // Required
  string attribute_id = 1 [(buf.validate.field).required = true];
  string value = 2     [
    (buf.validate.field).required = true,
    (buf.validate.field).string.max_len = 253,
    (buf.validate.field).cel = {
      id: "attribute_value_format",
      message: "Attribute value must be an alphanumeric string, allowing hyphens and underscores but not as the first or last character. The stored attribute value will be normalized to lower case.",
      expression: "this.matches('^[a-zA-Z0-9](?:[a-zA-Z0-9_-]*[a-zA-Z0-9])?$')"
    }
  ];

  // deprecated members on values
  reserved "members";
  reserved 3;

  // Common metadata
  common.MetadataMutable metadata = 100;
}
message CreateAttributeValueResponse {
  policy.Value value = 1;
}

message UpdateAttributeValueRequest {
  string id = 1 [(buf.validate.field).required = true];

  // Deprecated
  reserved "members";
  reserved 4;

  // Common metadata
  common.MetadataMutable metadata = 100;
  common.MetadataUpdateEnum metadata_update_behavior = 101;
}
message UpdateAttributeValueResponse {
  policy.Value value = 1;
}

message DeactivateAttributeValueRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message DeactivateAttributeValueResponse {
  policy.Value value = 1;
}

message GetAttributeValuesByFqnsRequest {
  // Required
  // Fully Qualified Names of attribute values (i.e. https://<namespace>/attr/<attribute_name>/value/<value_name>), normalized to lower case.
  repeated string fqns = 1 [(buf.validate.field).required = true];
  policy.AttributeValueSelector with_value = 2 [(buf.validate.field).required = true];
}
message GetAttributeValuesByFqnsResponse {
  message AttributeAndValue {
    policy.Attribute attribute = 1;
    policy.Value value = 2;
  }
  // map of FQNs to complete attributes and the one selected value
  map<string, AttributeAndValue> fqn_attribute_values = 1;
}

/*
   Assign Key Access Server (KAS Grant) to Attribute and Value
*/

message AssignKeyAccessServerToAttributeRequest {
  AttributeKeyAccessServer attribute_key_access_server = 1;
}

message AssignKeyAccessServerToAttributeResponse {
  AttributeKeyAccessServer attribute_key_access_server = 1;
}

message RemoveKeyAccessServerFromAttributeRequest {
  AttributeKeyAccessServer attribute_key_access_server = 1;
}

message RemoveKeyAccessServerFromAttributeResponse {
  AttributeKeyAccessServer attribute_key_access_server = 1;
}

message AssignKeyAccessServerToValueRequest {
  ValueKeyAccessServer value_key_access_server = 1;
}

message AssignKeyAccessServerToValueResponse {
  ValueKeyAccessServer value_key_access_server = 1;
}

message RemoveKeyAccessServerFromValueRequest {
  ValueKeyAccessServer value_key_access_server = 1;
}

message RemoveKeyAccessServerFromValueResponse {
  ValueKeyAccessServer value_key_access_server = 1;
}

// LIST of KAS Grants returns flat response of grants to all policy objects.
// It does not employ selectors or build the attribute tree relation. If grants
// to a known namespace, attribute, or value are needed, use the respective
// Get request to the specific policy object.
message ListKeyAccessServerGrantsRequest {
  // Optional
  // Filter LIST by either ID or URI of a registered Key Access Server.
  // If neither is provided, grants from all registered KASs to policy attribute objects are returned.
  string kas_id = 1;
  string kas_uri = 2;
}

message ListKeyAccessServerGrantsResponse {
  // index 1 is reserved for the outcome of ADR [https://github.com/opentdf/platform/issues/1296]
  // repeated NamespaceKeyAccessServer namespace_grants = 1;
  repeated AttributeKeyAccessServerGrant attribute_grants = 2;
  repeated ValueKeyAccessServerGrant value_grants = 3;
}

///
/// Attribute Service
///
service AttributesService {
  /*--------------------------------------*
   * Attribute RPCs
   *---------------------------------------*/
  rpc ListAttributes(ListAttributesRequest) returns (ListAttributesResponse) {
    option (google.api.http) = {get: "/attributes"};
  }
  rpc ListAttributeValues(ListAttributeValuesRequest) returns (ListAttributeValuesResponse) {
    option (google.api.http) = {get: "/attributes/*/values"};
  }

  rpc GetAttribute(GetAttributeRequest) returns (GetAttributeResponse) {
    option (google.api.http) = {get: "/attributes/{id}"};
  }
  rpc GetAttributeValuesByFqns(GetAttributeValuesByFqnsRequest) returns (GetAttributeValuesByFqnsResponse) {
    option (google.api.http) = {get: "/attributes/*/fqn"};
  }

  rpc CreateAttribute(CreateAttributeRequest) returns (CreateAttributeResponse) {
    option (google.api.http) = {
      post: "/attributes"
      body: "*"
    };
  }

  rpc UpdateAttribute(UpdateAttributeRequest) returns (UpdateAttributeResponse) {
    option (google.api.http) = {
      patch: "/attributes/{id}"
      body: "*"
    };
  }

  rpc DeactivateAttribute(DeactivateAttributeRequest) returns (DeactivateAttributeResponse) {
    option (google.api.http) = {delete: "/attributes/{id}"};
  }

  /*--------------------------------------*
   * Value RPCs
   *---------------------------------------*/
  rpc GetAttributeValue(GetAttributeValueRequest) returns (GetAttributeValueResponse) {
    option (google.api.http) = {get: "/attributes/*/values/{id}"};
  }

  rpc CreateAttributeValue(CreateAttributeValueRequest) returns (CreateAttributeValueResponse) {
    option (google.api.http) = {
      post: "/attributes/{attribute_id}/values"
      body: "*"
    };
  }

  rpc UpdateAttributeValue(UpdateAttributeValueRequest) returns (UpdateAttributeValueResponse) {
    option (google.api.http) = {
      patch: "/attributes/*/values/{id}"
      body: "*"
    };
  }

  rpc DeactivateAttributeValue(DeactivateAttributeValueRequest) returns (DeactivateAttributeValueResponse) {
    option (google.api.http) = {delete: "/attributes/*/values/{id}"};
  }

  /*--------------------------------------*
   * Attribute <> Key Access Server RPCs
   *---------------------------------------*/
  rpc AssignKeyAccessServerToAttribute(AssignKeyAccessServerToAttributeRequest) returns (AssignKeyAccessServerToAttributeResponse) {
    option (google.api.http) = {
      post: "/attributes/keyaccessserver/assign"
      body: "attribute_key_access_server"
    };
  }

  rpc RemoveKeyAccessServerFromAttribute(RemoveKeyAccessServerFromAttributeRequest) returns (RemoveKeyAccessServerFromAttributeResponse) {
    option (google.api.http) = {
      post: "/attributes/keyaccessserver/remove"
      body: "attribute_key_access_server"
    };
  }

  rpc AssignKeyAccessServerToValue(AssignKeyAccessServerToValueRequest) returns (AssignKeyAccessServerToValueResponse) {
    option (google.api.http) = {
      post: "/attributes/values/keyaccessserver/assign"
      body: "value_key_access_server"
    };
  }

  rpc RemoveKeyAccessServerFromValue(RemoveKeyAccessServerFromValueRequest) returns (RemoveKeyAccessServerFromValueResponse) {
    option (google.api.http) = {
      post: "/attributes/values/keyaccessserver/remove"
      body: "value_key_access_server"
    };
  }
}
