syntax = "proto3";

package policy;

message AttributeNamespaceSelector {
	message AttributeSelector {
		bool with_key_access_grants = 1;

		message ValueSelector {
			bool with_key_access_grants = 1;
			bool with_subject_maps = 2;
			bool with_resource_maps = 3;
	    }
		ValueSelector with_values = 10;
	}
	AttributeSelector with_attributes = 10;
}

message AttributeDefinitionSelector {
	bool with_key_access_grants = 1;

	message NamespaceSelector {}
	NamespaceSelector with_namespace = 10;

	message ValueSelector {
		bool with_key_access_grants = 1;
		bool with_subject_maps = 2;
		bool with_resource_maps = 3;
    }
	ValueSelector with_values = 11;
}

message AttributeValueSelector {
	bool with_key_access_grants = 1;
	bool with_subject_maps = 2;
	bool with_resource_maps = 3;

	message AttributeSelector {
		bool with_key_access_grants = 1;

		message NamespaceSelector {}
		NamespaceSelector with_namespace = 10;
    }
	AttributeSelector with_attribute = 10;
}

message PageRequest {
  // Optional
  // Set to configured default limit if not provided
  // Maximum limit set in platform config and enforced by services
  int32 limit = 1;
  // Optional
  // Defaulted if not provided
  int32 offset = 2;
}

message PageResponse {
  // Requested pagination offset
  int32 current_offset = 1;
  // Calculated with request limit + offset or defaults
  // Empty when none remain after current page
  int32 next_offset = 2;
  // Total count of entire list
  int32 total = 3;
}